--- a/PROJECTS/LOOPSTUDIOS-PAGE/index.html
+++ b/PROJECTS/LOOPSTUDIOS-PAGE/index.html
@@ -38,7 +38,7 @@
     <main>
         <section class="section" id="top">
             <div class="container">
-                <div class="hero" data-aos="fade-up">
+                <div class="hero">
                     <h1 class="hero-title">Immersive experiences that deliver</h1>
                 </div>
             </div>
