--- a/PROJECTS/LOOPSTUDIOS-PAGE/index.html
+++ b/PROJECTS/LOOPSTUDIOS-PAGE/index.html
@@ -39,6 +39,10 @@
         <section class="section" id="top">
             <div class="container">
                 <div class="hero">
+                    <span class="span-border"></span>
+                    <span class="span-border"></span>
+                    <span class="span-border"></span>
+                    <span class="span-border"></span>
                     <h1 class="hero-title">Immersive experiences that deliver</h1>
                 </div>
             </div>
