fixed jquery link

--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
     </footer>
     <div id="back-to-top-btn"><img src="./images/up-icon.png" alt="Back to top"></div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/jquery.roadmap.js"></script>
     <script src="js/study-roadmap.js"></script>
