update documentation project

--- a/PROJECTS/DOCUMENTATION PAGE/courses.html
+++ b/PROJECTS/DOCUMENTATION PAGE/courses.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <div id="loading"><img id="loading-image" src="https://i.pinimg.com/originals/8b/32/15/8b3215c7ee7dbd5e33b36383a83a04b7.gif" alt="Loading..." /></div>
     <header>
         <div class="container">
             <a href="./index.html">
@@ -70,38 +71,141 @@
                 </div>
                 <div class="documents-content">
                     <div class="documents-menu">
-                        <a href="#it" class="documents-link">công nghệ thông tin</a>
+                        <a href="#dsa" class="documents-link">cấu trúc dữ liệu & giải thuật</a>
+                        <a href="#csdl" class="documents-link">cơ sở dữ liệu</a>
+                        <a href="#c" class="documents-link">Lập trình C++</a>
+                        <a href="#c#" class="documents-link">Lập trình C#</a>
+                        <a href="#py" class="documents-link">Lập trình Python</a>
+                        <a href="#fe" class="documents-link">Lập trình Web</a>
+                        <a href="#mmt" class="documents-link">mạng máy tính</a>
+                        <a href="#pts" class="documents-link">photoshop</a>
+                        <a href="#officeIT" class="documents-link">tin học văn phòng</a>
                         <a href="#mathematics" class="documents-link">toán học</a>
                     </div>
                     <div class="documents-list">
                         <div class="document-subject">
-                            <h3 class="document-title IT-document-title" id="it">CÔNG NGHỆ THÔNG TIN</h3>
+                            <h3 class="document-title" id="dsa">cấu trúc dữ liệu & giải thuật</h3>
                             <ul class="list-courses">
                                 <li class="list-courses-item">
-                                    <a href="https://www.youtube.com/watch?v=CxMbQ2AqteE&list=PLLAJJPGNwNkghoNSB9xq22EJ_Z1rX7Ygs" class="list-courses-link" target="blank">1. Lập trình web cơ bản - Thư viện lập trình</a>
+                                    <a href="https://www.youtube.com/watch?v=w5FqAJFE6kM&list=PLh0dKrccRc5olyM5CVZQDcBq3MJMhqh8e" class="list-courses-link" target="blank">1. Cấu trúc dữ liệu & giải thuật - MAAM CODE</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://www.youtube.com/watch?v=WS05AU6YYm4&list=PL33lvabfss1xagFyyQPRcppjFKMQ7lvJM" class="list-courses-link" target="blank">2. Lập trình C++ cơ bản - HowKteam</a>
+                                    <a href="https://www.youtube.com/watch?v=1bzO9aqEx9c&list=PLE1qPKuGSJaASONe1augV__4DCAqeK1d2" class="list-courses-link" target="blank">2. Cấu trúc dữ liệu & giải thuật - Thân Triệu</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://www.youtube.com/watch?v=2rGWurqjXso&list=PLZEIt444jqpD6NUtMg5X6Y3T4lYqcudO9" class="list-courses-link" target="blank">3. Lập trình C++ cơ bản - Son Nguyen</a>
+                                    <a href="https://www.youtube.com/user/vivekanandkhyade/" class="list-courses-link" target="blank">3. Vivekanand Khyade - Algorithm Every Day</a>
+                                </li>
+
+                            </ul>
+                        </div>
+                        <div class="document-subject">
+                            <h3 class="document-title" id="csdl">cơ sở dữ liệu</h3>
+                            <ul class="list-courses">
+                                <li class="list-courses-item">
+                                    <a href="https://www.youtube.com/watch?v=hj9BsGm8Ec8&list=PLLAJJPGNwNkgjhr6nc2UVAwiByxRsqvTi" class="list-courses-link" target="blank">1. Cơ sở dữ liệu - Thư viện lập trình</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://www.youtube.com/watch?v=NZj6LI5a9vc&list=PL33lvabfss1xczCv2BA0SaNJHu_VXsFtg" class="list-courses-link" target="blank">4. Lập trình Python cơ bản - HowKteam</a>
+                                    <a href="https://www.youtube.com/watch?v=2fanjSYVElY&list=PL33lvabfss1xnFpWQF6YH11kMTS1HmLsw" class="list-courses-link" target="blank">2. Khóa học sử dụng SQL - HowKteam</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://www.youtube.com/watch?v=gL5HBA_1bDQ&list=PLJ5qtRQovuEOoKffoCBzTfvzMTTORnoyp" class="list-courses-link" target="blank">5. Lập trình ReactJS - nghiepuit</a>
-                                </li>
-                                <li class="list-courses-item">
-                                    <a href="https://www.youtube.com/watch?v=EO6OkltgudE&list=PLpPnRKq7eNW3We9VdCfx9fprhqXHwTPXL" class="list-courses-link" target="blank">6. HTML5 Canvas Tutorial for Beginners - Chris Courses</a>
-                                </li>
-                                <li class="list-courses-item">
-                                    <a href="https://www.youtube.com/watch?v=Ph698ROGjbs&list=PLHKH6Uj0Seea4gnA8A80PvW9XAQkT37bD" class="list-courses-link" target="blank">7. CSS effects level up - CSS Animation</a>
+                                    <a href="https://www.youtube.com/watch?v=oFSogK7WNQQ&list=PLLAJJPGNwNkjEdi8khZJ5gGfkhEp33wgU" class="list-courses-link" target="blank">3. MS SQL Server - Thư viện lập trình</a>
                                 </li>
                             </ul>
                         </div>
                         <div class="document-subject">
-                            <h3 class="document-title IT-document-title" id="mathematics">TOÁN HỌC</h3>
+                            <h3 class="document-title" id="c">Lập trình C++</h3>
+                            <ul class="list-courses">
+                                <li class="list-courses-item">
+                                    <a href="https://www.youtube.com/watch?v=WS05AU6YYm4&list=PL33lvabfss1xagFyyQPRcppjFKMQ7lvJM" class="list-courses-link" target="blank">1. Lập trình C++ cơ bản - HowKteam</a>
+                                </li>
+                                <li class="list-courses-item">
+                                    <a href="https://www.youtube.com/watch?v=2rGWurqjXso&list=PLZEIt444jqpD6NUtMg5X6Y3T4lYqcudO9" class="list-courses-link" target="blank">2. Lập trình C++ cơ bản - Son Nguyen</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="document-subject">
+                            <h3 class="document-title" id="c#">Lập trình C#</h3>
+                            <ul class="list-courses">
+                                <li class="list-courses-item">
+                                    <a href="https://www.youtube.com/watch?v=9kohr6pMwag&list=PL33lvabfss1wUj15ea6W0A-TtDOrWWSRK" class="list-courses-link" target="blank">1. Lập trình C# cơ bản - HowKteam</a>
+                                </li>
+                                <li class="list-courses-item">
+                                    <a href="https://www.youtube.com/watch?v=WQ9j2sPRstk&list=PL33lvabfss1zRgaWBcC__Bnt5AOSRfU71" class="list-courses-link" target="blank">1. Lập trình hướng đối tượng C# - HowKteam</a>
+                                </li>
+                                <li class="list-courses-item">
+                                    <a href="https://www.youtube.com/watch?v=EPt10AVbLvk&list=PL33lvabfss1y5jmklzilr2W2LZiltk6bU" class="list-courses-link" target="blank">2. Lập trình C# nâng cao - HowKteam</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="document-subject">
+                            <h3 class="document-title" id="py">Lập trình Python</h3>
+                            <ul class="list-courses">
+                                <li class="list-courses-item">
+                                    <a href="https://www.youtube.com/watch?v=NZj6LI5a9vc&list=PL33lvabfss1xczCv2BA0SaNJHu_VXsFtg" class="list-courses-link" target="blank">1. Lập trình Python cơ bản - HowKteam</a>
+                                </li>
+                                <li class="list-courses-item">
+                                    <a href="https://www.youtube.com/watch?v=RUVdcNEqOUE&list=PL33lvabfss1wez4satmqv2q-AjOi91h6M" class="list-courses-link" target="blank">2. Lập trình OOP Python - HowKteam</a>
+                                </li>
+                                <li class="list-courses-item">
+                                    <a href="https://www.youtube.com/watch?v=_ZjIv2D6T40&list=PL33lvabfss1zLDVHXW_YUJxhxBFap-vm_" class="list-courses-link" target="blank">3. Lập trình machine learning cơ bản với Python  - HowKteam</a>
+                                </li>
+                                <li class="list-courses-item">
+                                    <a href="https://www.youtube.com/watch?v=O8I1gjoDlhs&list=PLiZ__4NpI1FVTb_CK63aCrpqFaVDsbbLd" class="list-courses-link" target="blank">4. Lập trình Python cơ bản - KYNA.VN</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="document-subject">
+                            <h3 class="document-title" id="fe">Lập trình Web</h3>
+                            <ul class="list-courses">
+                                <li class="list-courses-item">
+                                    <a href="https://www.youtube.com/watch?v=Ph698ROGjbs&list=PLHKH6Uj0Seea4gnA8A80PvW9XAQkT37bD" class="list-courses-link" target="blank">1. CSS effects level up - CSS Animation</a>
+                                </li>
+                                <li class="list-courses-item">
+                                    <a href="https://www.youtube.com/watch?v=EO6OkltgudE&list=PLpPnRKq7eNW3We9VdCfx9fprhqXHwTPXL" class="list-courses-link" target="blank">2. HTML5 Canvas Tutorial for Beginners - Chris Courses</a>
+                                </li>
+                                <li class="list-courses-item">
+                                    <a href="https://www.youtube.com/watch?v=gL5HBA_1bDQ&list=PLJ5qtRQovuEOoKffoCBzTfvzMTTORnoyp" class="list-courses-link" target="blank">3. Lập trình ReactJS - nghiepuit</a>
+                                </li>
+                                <li class="list-courses-item">
+                                    <a href="https://www.youtube.com/watch?v=CxMbQ2AqteE&list=PLLAJJPGNwNkghoNSB9xq22EJ_Z1rX7Ygs" class="list-courses-link" target="blank">4. Lập trình web cơ bản - Thư viện lập trình</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="document-subject">
+                            <h3 class="document-title" id="mmt">mạng máy tính</h3>
+                            <ul class="list-courses">
+                                <li class="list-courses-item">
+                                    <a href="https://www.youtube.com/watch?v=S1SvECZtTCA&list=PLAWl4sDZTi7swN1NS7E-4AZIRacmGQDES" class="list-courses-link" target="blank">1. Mạng máy tính - Đào tạo từ xa HCMUS</a>
+                                </li>
+                                <li class="list-courses-item">
+                                    <a href="https://www.youtube.com/watch?v=MOUU0tPzzYw&list=PL58AX_bGwDL-yfoWRxxJv571UqHnO7Dca&index=64" class="list-courses-link" target="blank">2. Mạng máy tính nâng cao CCNA</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="document-subject">
+                            <h3 class="document-title" id="pts">photoshop</h3>
+                            <ul class="list-courses">
+                                <li class="list-courses-item">
+                                    <a href="https://www.youtube.com/watch?v=T3YQvwuutXc&list=PLLAJJPGNwNkjnfaXTOwFdocqpumMwjYZR" class="list-courses-link" target="blank">1. Photoshop CS6 - Thư viện lập trình</a>
+                                </li>
+                                <li class="list-courses-item">
+                                    <a href="https://www.youtube.com/watch?v=cbEXYQDKKs4&list=PLLAJJPGNwNkgs4JY_keKYRG8a_seqLVwa" class="list-courses-link" target="blank">2. Thực hành Photoshop CS6 - Thư viện lập trình</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="document-subject">
+                            <h3 class="document-title" id="officeIT">tin học văn phòng</h3>
+                            <ul class="list-courses">
+                                <li class="list-courses-item">
+                                    <a href="https://www.youtube.com/watch?v=wrRiWP_JOZI&list=PL33lvabfss1ziBSWjATG7FVI4yrKrsCjX" class="list-courses-link" target="blank">1. MS Excel cơ bản - HowKteam</a>
+                                </li>
+                                <li class="list-courses-item">
+                                    <a href="https://www.youtube.com/watch?v=lzZaOZV6bh0&list=PL33lvabfss1wYB99hvykCm5YHZ69gmTaQ" class="list-courses-link" target="blank">2. MS Word cơ bản - HowKteam</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="document-subject">
+                            <h3 class="document-title" id="mathematics">toán học</h3>
                             <ul class="list-courses">
                                 <li class="list-courses-item">
                                     <a href="https://www.youtube.com/watch?v=-CsHlJpV3kk&list=PLsEmKKF4H46k013lBf0S_NFCMfU-JNZbd" class="list-courses-link" target="blank">1. Xác suất thống kê - Eureka! Uni</a>
@@ -124,6 +228,7 @@
     <script src="./js/header.js"></script>
     <script src="./js/music-player.js"></script>
     <script src="./js/script.js"></script>
+    <script src="./js/pre-load.js"></script>
 </body>
 
 </html>
