--- a/PROJECTS/DOCUMENTATION PAGE/documents.html
+++ b/PROJECTS/DOCUMENTATION PAGE/documents.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <div id="loading"><img id="loading-image" src="https://i.pinimg.com/originals/8b/32/15/8b3215c7ee7dbd5e33b36383a83a04b7.gif" alt="Loading..." /></div>
     <header>
         <div class="container">
             <a href="./index.html">
@@ -695,6 +696,7 @@
     <script src="./js/header.js"></script>
     <script src="./js/music-player.js"></script>
     <script src="./js/script.js"></script>
+    <script src="./js/pre-load.js"></script>
 </body>
 
 </html>
