--- a/PROJECTS/DOCUMENTATION PAGE/index.html
+++ b/PROJECTS/DOCUMENTATION PAGE/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <div id="loading"><img id="loading-image" src="https://i.pinimg.com/originals/8b/32/15/8b3215c7ee7dbd5e33b36383a83a04b7.gif" alt="Loading..." /></div>
     <header class="home">
         <div class="container">
             <a href="./index.html">
@@ -50,19 +51,19 @@
     <main>
         <section class="section">
             <div class="container home main-content normal">
-                <a href="./courses.html">
+                <a href="./courses.html" class="content-link">
                     <div class="content courses">
                         <img src="./images/holding-book.png" class="content-img" alt="Courses">
                         <h2 class="content-title">Khoá học</h2>
                     </div>
                 </a>
-                <a href="./documents.html">
+                <a href="./documents.html" class="content-link">
                     <div class="content documents">
                         <img src="./images/document.png" class="content-img" alt="Documents">
                         <h2 class="content-title">Tài Liệu</h2>
                     </div>
                 </a>
-                <a href="./tests.html">
+                <a href="./tests.html" class="content-link">
                     <div class="content tests">
                         <img src="./images/test.png" class="content-img" alt="Tests">
                         <h2 class="content-title">Đề Thi</h2>
@@ -78,6 +79,7 @@
     <script src="./js/header.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/music-player.js"></script>
+    <script src="./js/pre-load.js"></script>
 </body>
 
 </html>
