--- a/index.html
+++ b/index.html
@@ -193,6 +193,21 @@
                     <li class="list" data-filter="others">Others</li>
                 </ul>
                 <div data-aos="zoom-in-up" class="product">
+                    <div class="project-card others" id="documentation-page-card">
+                        <div class="project-card__content">
+                            <a href="./PROJECTS/DOCUMENTATION PAGE/index.html" target="blanc"><span class="fas fa-play"></span></a>
+                            <a href="https://github.com/TranPhuongDinh/dinhtran/tree/master/PROJECTS/DOCUMENTATION%20PAGE" target="blanc"><span class="fas fa-code"></span></a>
+                        </div>
+                        <div class="project-card__info">
+                            <a href="./PROJECTS/DOCUMENTATION PAGE/index.html">Documentation Page</a>
+                            <div>
+                                <span>HTML</span>
+                                <span>CSS</span>
+                                <span>JS</span>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="project-card others" id="loop-studios-card">
                         <div class="project-card__content">
                             <a href="./PROJECTS/LOOPSTUDIOS-PAGE/index.html" target="blanc"><span class="fas fa-play"></span></a>
