--- a/PROJECTS/DOCUMENTATION PAGE/contribution.html
+++ b/PROJECTS/DOCUMENTATION PAGE/contribution.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <div id="loading"><img id="loading-image" src="https://i.pinimg.com/originals/8b/32/15/8b3215c7ee7dbd5e33b36383a83a04b7.gif" alt="Loading..." /></div>
     <header>
         <div class="container">
             <a href="./index.html">
@@ -50,7 +51,7 @@
     </header>
     <main>
         <section class="section contribution">
-            <div class="container main-content normal">
+            <div class="container main-content normal contribution">
                 <div class="feature-bar">
                     <div class="open-feature-btn"><img src="./images/menu.png" alt="Menu btn"></div>
                     <ul class="feature-list">
@@ -68,22 +69,33 @@
                         <a class="navigation-link" href="./contribution.html">Đóng góp</a>
                     </div>
                 </div>
-                <div class="document-subject">
-                    <h3 class="contribution-title">Tài liệu của trang được tổng hợp từ các nguồn sau: </h3>
-                    <ul class="list-courses">
-                        <li class="list-courses-item">
-                            <a href="https://tailieuhcmus.blogspot.com/" class="list-courses-link" target="blank">1. Tài Liệu HCMUS</a>
-                        </li>
-                        <li class="list-courses-item">
-                            <a href="https://drive.google.com/drive/folders/1fP-kASOLyuN8foH18tYlonfsCNanDn1J?fbclid=IwAR2xzr1UEsWBonxnQ2Tulkw3q2N_6HMsgTCtmu8l49V08rNTAKDuTTeLOrc" class="list-courses-link" target="blank">2. Ôn thi học kì ITUS</a>
-                        </li>
-                </div>
-                <div class="contribution-area">
-                    <p class="contribution-text">Bạn có thể chia sẻ tài liệu và đề thi ở <a class="gg-drive-link contribution-link" href="https://driveuploader.com/upload/JS58fXozqO/" target="blank">đây</a> hoặc tham gia nhóm <a class="fb-link contribution-link" href="https://www.facebook.com/groups/tailieuhcmus"
-                            target="blank">Tài liệu HCMUS</a> nhé! Chúc bạn có những năm tháng đại học thật vui vẻ và hữu ích!</p>
-                    <div class="btn-group">
-                        <a class="contribution-btn" href="https://driveuploader.com/upload/JS58fXozqO/" target="blank">Google Drive</a>
-                        <a class="contribution-btn" href="https://www.facebook.com/groups/tailieuhcmus" target="blank">Tài liệu HCMUS</a>
+                <div class="contribution-content">
+                    <div class="document-subject contribution">
+                        <h3 class="contribution-title">Tài liệu của trang được tổng hợp từ các nguồn sau: </h3>
+                        <ul class="list-courses">
+                            <li class="list-courses-item">
+                                <a href="https://tailieuhcmus.blogspot.com/" class="list-courses-link" target="blank">1. Tài Liệu HCMUS</a>
+                            </li>
+                            <li class="list-courses-item">
+                                <a href="https://www.facebook.com/groups/tailieuhcmus" class="list-courses-link" target="blank">2. Group Tài liệu HCMUS</a>
+                            </li>
+                            <li class="list-courses-item">
+                                <a href="https://drive.google.com/drive/folders/1fP-kASOLyuN8foH18tYlonfsCNanDn1J?fbclid=IwAR2xzr1UEsWBonxnQ2Tulkw3q2N_6HMsgTCtmu8l49V08rNTAKDuTTeLOrc" class="list-courses-link" target="blank">3. Ôn thi học kì ITUS</a>
+                            </li>
+                            <li class="list-courses-item">
+                                <a href="https://vinahost.vn/thu-thuat-tim-kiem-tren-google" class="list-courses-link" target="blank">4. Google :))</a>
+                            </li>
+                            <li class="list-courses-item">
+                                <a href="https://bloganchoi.com/kenh-youtube-noi-dung-thu-vi-va-huu-ich-nhat-2020/" class="list-courses-link" target="blank">5. Youtube :))</a>
+                            </li>
+                    </div>
+                    <div class="contribution-area">
+                        <p class="contribution-text">Bạn có thể chia sẻ tài liệu và đề thi ở <a class="gg-drive-link contribution-link" href="https://driveuploader.com/upload/JS58fXozqO/" target="blank">đây</a> hoặc tham gia nhóm <a class="fb-link contribution-link" href="https://www.facebook.com/groups/tailieuhcmus"
+                                target="blank">Tài liệu HCMUS</a> nhé! Chúc bạn có những năm tháng đại học thật vui vẻ và hữu ích!</p>
+                        <div class="btn-group">
+                            <a class="contribution-btn" href="https://driveuploader.com/upload/JS58fXozqO/" target="blank">Google Drive</a>
+                            <a class="contribution-btn" href="https://www.facebook.com/groups/tailieuhcmus" target="blank">Tài liệu HCMUS</a>
+                        </div>
                     </div>
                 </div>
                 <div class="music-player">
@@ -97,6 +109,7 @@
     <script src="./js/header.js"></script>
     <script src="./js/music-player.js"></script>
     <script src="./js/script.js"></script>
+    <script src="./js/pre-load.js"></script>
 </body>
 
 </html>
