--- a/PROJECTS/DOCUMENTATION PAGE/courses.html
+++ b/PROJECTS/DOCUMENTATION PAGE/courses.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="documents-content">
                     <div class="documents-menu">
-                        <a href="#dsa" class="documents-link">cấu trúc dữ liệu & giải thuật</a>
+                        <a href="#dsa" class="documents-link active">cấu trúc dữ liệu & giải thuật</a>
                         <a href="#csdl" class="documents-link">cơ sở dữ liệu</a>
                         <a href="#c" class="documents-link">Lập trình C++</a>
                         <a href="#c#" class="documents-link">Lập trình C#</a>
