--- a/PROJECTS/DOCUMENTATION PAGE/documents.html
+++ b/PROJECTS/DOCUMENTATION PAGE/documents.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="documents-content">
                     <div class="documents-menu">
-                        <a href="#politics" class="documents-link">chính trị</a>
+                        <a href="#politics" class="documents-link active">chính trị</a>
                         <a href="#it" class="documents-link">công nghệ thông tin</a>
                         <a href="#geology" class="documents-link">địa chất</a>
                         <a href="#dtvt" class="documents-link">điện tử - viễn thông</a>
