--- a/PROJECTS/DOCUMENTATION PAGE/tests.html
+++ b/PROJECTS/DOCUMENTATION PAGE/tests.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="documents-content">
                     <div class="documents-menu">
-                        <a href="#it" class="documents-link">công nghệ thông tin</a>
+                        <a href="#it" class="documents-link active">công nghệ thông tin</a>
                         <a href="#biology" class="documents-link">sinh học</a>
                         <a href="#chemistry" class="documents-link">hoá học</a>
                         <a href="#officeIT" class="documents-link">tin học cơ sở</a>
