update sound icon

--- a/PROJECTS/DOCUMENTATION PAGE/index.html
+++ b/PROJECTS/DOCUMENTATION PAGE/index.html
@@ -70,6 +70,7 @@
                     </div>
                 </a>
                 <div class="music-player">
+                    <img class="music-player-pause" src="./images/audio-wave.png" alt="pause">
                     <canvas id="canvas"></canvas>
                 </div>
             </div>
