--- a/PROJECTS/DOCUMENTATION PAGE/tests.html
+++ b/PROJECTS/DOCUMENTATION PAGE/tests.html
@@ -266,6 +266,7 @@
                     </div>
                 </div>
                 <div class="music-player">
+                    <img class="music-player-pause" src="./images/audio-wave.png" alt="pause">
                     <canvas id="canvas"></canvas>
                 </div>
             </div>
