--- a/PROJECTS/DOCUMENTATION PAGE/tests.html
+++ b/PROJECTS/DOCUMENTATION PAGE/tests.html
@@ -60,7 +60,7 @@
                         <a href="https://driveuploader.com/upload/JS58fXozqO/" target="blank">
                             <li class="feature-item"><img src="./images/google-drive.png" alt="Google Drive"></li>
                         </a>
-                        <li class="feature-item dark-mode-btn"><img src="./images/moon.png" alt="Dark mode"></li>
+                        <li class="feature-item light-mode-btn"><img src="./images/moon.png" alt="Dark mode"></li>
                     </ul>
                     <div class="navigation-bar">
                         <a class="navigation-link" href="./index.html">Trang chủ</a><img src="./images/chevron-right.png" alt="right arrow">
