--- a/PROJECTS/DOCUMENTATION PAGE/contribution.html
+++ b/PROJECTS/DOCUMENTATION PAGE/contribution.html
@@ -53,21 +53,24 @@
         <section class="section contribution">
             <div class="container main-content normal contribution">
                 <div class="feature-bar">
-                    <div class="open-feature-btn"><img src="./images/menu.png" alt="Menu btn"></div>
-                    <ul class="feature-list">
-                        <li class="feature-item notification-btn"><img src="./images/notification.png" alt="Notifications"></li>
-                        <a href="https://www.facebook.com/groups/tailieuhcmus" target="blank">
-                            <li class="feature-item"><img src="./images/facebook.png" alt="Facebook"></li>
-                        </a>
-                        <a href="https://driveuploader.com/upload/JS58fXozqO/" target="blank">
-                            <li class="feature-item"><img src="./images/google-drive.png" alt="Google Drive"></li>
-                        </a>
-                        <li class="feature-item light-mode-btn"><img src="./images/moon.png" alt="Dark mode"></li>
-                    </ul>
-                    <div class="navigation-bar">
-                        <a class="navigation-link" href="./index.html">Trang chủ</a><img src="./images/chevron-right.png" alt="right arrow">
-                        <a class="navigation-link" href="./contribution.html">Đóng góp</a>
+                    <div class="main-feature">
+                        <div class="open-feature-btn"><img src="./images/menu.png" alt="Menu btn"></div>
+                        <ul class="feature-list">
+                            <li class="feature-item notification-btn"><img src="./images/notification.png" alt="Notifications"></li>
+                            <a href="https://www.facebook.com/groups/tailieuhcmus" target="blank">
+                                <li class="feature-item"><img src="./images/facebook.png" alt="Facebook"></li>
+                            </a>
+                            <a href="https://driveuploader.com/upload/JS58fXozqO/" target="blank">
+                                <li class="feature-item"><img src="./images/google-drive.png" alt="Google Drive"></li>
+                            </a>
+                            <li class="feature-item light-mode-btn"><img src="./images/moon.png" alt="Dark mode"></li>
+                        </ul>
+                        <div class="navigation-bar">
+                            <a class="navigation-link" href="./index.html">Trang chủ</a><img src="./images/chevron-right.png" alt="right arrow">
+                            <a class="navigation-link" href="./contribution.html">Đóng góp</a>
+                        </div>
                     </div>
+                    <input class="search-bar" type="text" id="myInput" placeholder="Tìm kiếm nguồn đóng góp">
                 </div>
                 <div class="contribution-content">
                     <div class="document-subject contribution">
